--- a/webparts/bootstrap/config/config.json
+++ b/webparts/bootstrap/config/config.json
@@ -11,9 +11,7 @@
       ]
     }
   },
-  "externals": {
-    "jquery": "https://code.jquery.com/jquery-3.1.0.min.js"
-  },
+  "externals": {},
   "localizedResources": {
     "HelloWorldWebPartStrings": "lib/webparts/helloWorld/loc/{locale}.js"
   }
